bases/kyverno-best-practices/clusterpolicy-require-run-as-non-root.yaml
# Audit pods that don't set runAsNonRoot.
# background: true so Kyverno scans existing resources and generates PolicyReports.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: wsh-require-run-as-non-root
  annotations:
    policies.kyverno.io/title: Require runAsNonRoot
    policies.kyverno.io/category: Pod Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      Audit pods that do not set runAsNonRoot at the pod or container level.
spec:
  validationFailureAction: Audit
  background: true
  rules:
  - name: run-as-non-root
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kyverno
          - flux-system
    validate:
      message: >-
        Running as root is not allowed. Set spec.securityContext.runAsNonRoot to true or spec.containers[*].securityContext.runAsNonRoot to true.
      anyPattern:
      - spec:
          securityContext:
            runAsNonRoot: true
      - spec:
          containers:
          - securityContext:
              runAsNonRoot: true
